force-app/main/default/objects/ssot__PatientMedicationReconciliation__dlm/fields/ssot__ConductedById__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConductedById__c</fullName>
    <label>Conducted By</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConductedById</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>