force-app/main/default/objects/ssot__PatientMedicationReconciliation__dlm/fields/ssot__ProcessStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProcessStartDateTime__c</fullName>
    <label>Process Start Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProcessStartDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>