force-app/main/default/objects/ssot__PatientMedicationReconciliation__dlm/fields/ssot__rel_1716721969977_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716721969977_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientMedicationReconciliation_Cond_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>PatientMedicationReconciliation_Cond_rel</relationshipLabel>
    <relationshipName>rel_1716721969977_end</relationshipName>
    <type>Lookup</type>
</CustomField>